Fixed the alignment issue on the navbar.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -63,8 +63,7 @@ nav {
     background-image: linear-gradient(#626262, #777777);
     width: 980px;
     height: 36px;
-    display: flex;
-    justify-content: center;
+    border-radius: 5px;
 }
 
 input {
@@ -73,6 +72,7 @@ input {
 
 .nav-list {
     height: 100%;
+    display: flex;
 }
 
 .nav-item {
@@ -80,15 +80,17 @@ input {
     font-size: 12px;
     height: 100%;
     align-items: center;
-    margin-top: 0;
+    margin: 0;
     padding: 0 25px;
+    border-right: 1px solid black;
+}
+
+.nav-item:last-child {
+    border: none;
 }
 
 .nav-item-anchor {
-    height: 100%;
-    display: inline-block;
     color: white;
-    vertical-align: middle;
 }
 
 footer {
@@ -146,7 +148,7 @@ a:link.nav-item-anchor {
 }
 
 .icon {
-    width: 24px;
+    width: 18px;
 }
 
 .pipe-delimited {
